// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ast widgets TagsSelect MultiSelectField should render array as value 1`] = `
<SelectField
  allowCustomValue={true}
  fixedWidth={false}
  fullWidth={false}
  id={null}
  onChange={[Function]}
  onSearchChange={[Function]}
  options={
    Array [
      Object {
        "label": "billing",
        "value": "billing",
      },
      Object {
        "label": "refund",
        "value": "refund",
      },
      Object {
        "label": "question",
        "value": "question",
      },
    ]
  }
  placeholder="Add a tag"
  required={false}
  singular="tag"
  style={
    Object {
      "display": "inline-block",
      "verticalAlign": "top",
    }
  }
  value={
    Array [
      "billing",
      "bugs",
    ]
  }
/>
`;

exports[`ast widgets TagsSelect MultiSelectField should render string as value 1`] = `
<MultiSelectField
  allowCustomValues={true}
  dropdownMenu={[Function]}
  onChange={[Function]}
  options={
    Array [
      Object {
        "label": "billing",
        "value": "billing",
      },
      Object {
        "label": "refund",
        "value": "refund",
      },
      Object {
        "label": "question",
        "value": "question",
      },
    ]
  }
  plural="tags"
  singular="tag"
  style={
    Object {
      "display": "inline-block",
      "verticalAlign": "top",
    }
  }
  tagColor="#0275d8"
  values={
    Array [
      "billing",
      " bugs",
    ]
  }
/>
`;

exports[`ast widgets TagsSelect should render a SelectField 1`] = `
<SelectField
  allowCustomValue={true}
  fixedWidth={false}
  fullWidth={false}
  id={null}
  onChange={[Function]}
  onSearchChange={[Function]}
  options={
    Array [
      Object {
        "label": "billing",
        "value": "billing",
      },
      Object {
        "label": "refund",
        "value": "refund",
      },
      Object {
        "label": "question",
        "value": "question",
      },
    ]
  }
  placeholder="Add a tag"
  required={false}
  singular="tag"
  style={
    Object {
      "display": "inline-block",
      "verticalAlign": "top",
    }
  }
  value="billing"
/>
`;
